--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "irazasyed/telegram-bot-sdk": "^3.13",
+        "laravel-notification-channels/telegram": "^4.0",
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.17",
+        "spatie/laravel-permission": "^5.10",
         "tymon/jwt-auth": "^2.0",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
