--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel-notification-channels/telegram": "^4.0",
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
+        "midtrans/midtrans-php": "^2.5",
         "phpoffice/phpspreadsheet": "^1.17",
         "spatie/laravel-permission": "^5.10",
         "tymon/jwt-auth": "^2.0",
